add auth for api

--- a/src/config/envs/development.env
+++ b/src/config/envs/development.env
@@ -1,5 +1,4 @@
 PORT=2711
-BASE_URL=http://localhost:2711
 
 POSTGRES_USERNAME=postgres
 POSTGRES_PASSWORD=postgres
@@ -9,3 +8,5 @@ POSTGRES_DATABASE=gateway
 
 REDIS_PORT=6379
 REDIS_HOST=localhost
+
+JWT_SECRET=tmrnd
