--- a/src/config/envs/development.env
+++ b/src/config/envs/development.env
@@ -2,7 +2,7 @@ PORT=2711
 BASE_URL=http://localhost:2711
 
 POSTGRES_USERNAME=postgres
-POSTGRES_PASSWORD=postgres
+POSTGRES_PASSWORD=Admin@123
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_DATABASE=gateway
