--- a/src/config/env/development.env
+++ b/src/config/env/development.env
@@ -1,7 +1,7 @@
 PORT=2711
 
 POSTGRES_USERNAME=postgres
-POSTGRES_PASSWORD=Admin@123
+POSTGRES_PASSWORD=postgres
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_DATABASE=gateway
