--- a/src/config/env/production.env
+++ b/src/config/env/production.env
@@ -1,7 +1,12 @@
-PORT=2711
+PORT=8989
 
-POSTGRES_USERNAME=admin
-POSTGRES_PASSWORD=admin
-POSTGRES_HOST=192.168.xx
+POSTGRES_USERNAME=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_DATABASE=gateway
+
+REDIS_PORT=6379
+REDIS_HOST=localhost
+
+JWT_SECRET=tmrnd
