--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "start:prod": "nest build && NODE_ENV=production node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "migrate:create": "ts-node ./node_modules/typeorm/cli.js migration:create -n",
-    "migrate:up": "ts-node ./node_modules/typeorm/cli.js migration:run",
-    "migrate:down": "ts-node ./node_modules/typeorm/cli.js migration:revert",
+    "typeorm": "typeorm-ts-node-esm",
+    "migration:create": "yarn typeorm migration:create",
+    "migration:generate": "yarn typeorm -d ./src/database/orm.config.ts migration:generate",
+    "migration:revert": "yarn typeorm -d ./src/database/orm.config.ts  migration:revert",
+    "migration:run": "yarn typeorm -d ./src/database/orm.config.ts migration:run",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -53,6 +55,7 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
+    "@types/faker": "^6.6.9",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
     "@types/supertest": "^2.0.11",
